termine el log in y registro

--- a/categorias.html
+++ b/categorias.html
@@ -28,8 +28,7 @@
         </div>
     </header>
     <footer class="footer">
-        <div class="footer-item">Ramiro Porro</div>
-        <div class="footer-item">Jonatan Maciel</div>
+        <div class="footer-item">Ramiro Porro Toyos</div>
     </footer>
     <script src="js/categorias.js"></script>
 </body>
