--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
     <a class="add-more" href="#">Cargar más</a>
 
     <footer class="footer">
-        <div class="footer-item">Ramiro Porro</div>
-        <div class="footer-item">Jonatan Maciel</div>
+        <div class="footer-item">Ramiro Porro Toyos</div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
