--- a/login.html
+++ b/login.html
@@ -3,34 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Log In</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-    <header>
-        <div class="container">
-            <section class="navigation">
-                <a href="./index.html"><img class="logo" src="imgs/logo.jpg" alt=""></a>
-                <form class="search-form" action="resultadobusqueda.html" method="get">  
-                    <input type="text" class="search" placeholder="     Buscar..." >
-                    <button type="submit" class="search-button">Buscar</button>
+
+
+<body class="body-login">
+
+
+    <main>
+        
+        <section class="login-container">
+
+            <div class="login-box">
+
+                <h2 class="titulo-login">Iniciar Sesión</h2>
+
+                <form id="logInForm">
+
+                    <div class="form-group">
+
+                        <label class="login_datos" for="username">Usuario:</label>
+                        <input type="text" id="username" name="username" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="login-datos" for="password">Contraseña:</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+
+                    <button class="login-button" type="submit">Iniciar Sesión</button>
                 </form>
-                <ul class="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="categorias.html">Categorías</a></li>
-                </ul>
-                <ul class="user">
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="registro.html">Registro</a></li>
-                </ul>
-                <img class="mobile-menu" src="./imgs/menumobile.png" alt="">
-            </section>
-        </div>
-    </header>
-    <footer class="footer">
-        <div class="footer-item">Ramiro Porro</div>
-        <div class="footer-item">Jonatan Maciel</div>
-    </footer>
-    <script src="js/login.js"></script>
+
+                <div class="links-login">
+                    <a href="./registro.html">No tengo cuenta</a>
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
