--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -27,10 +27,31 @@
             </section>
         </div>
     </header>
-    <footer class="footer">
-        <div class="footer-item">Ramiro Porro</div>
-        <div class="footer-item">Jonatan Maciel</div>
-    </footer>
-    <script src="js/registro.js"></script>
+    <main>
+        <div class="container">
+            <section class="register-form">
+                <h1>Registro</h1>
+                <form action="login.html" method="post" onsubmit="return validateForm()">
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Contraseña:</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="checkbox" id="terms" name="terms" required>
+                        <label for="terms">Términos y condiciones</label>
+                    </div>
+                    <div class="boton-registro">
+                        <button type="submit" style="margin-top: 10px;">Registrarse</button>
+                    </div>
+                </form>
+                <p>¿Ya tienes una cuenta? <a href="login.html">Iniciar sesión</a></p>
+            </section>
+        </div>
+    </main>
+    <script src="js/register.js"></script>
 </body>
 </html>
