--- a/categorias.html
+++ b/categorias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista de Categorías</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -27,6 +27,9 @@
             </section>
         </div>
     </header>
+    <main>
+        <div id="categorias-container"></div>
+    </main>
     <footer class="footer">
         <div class="footer-item">Ramiro Porro Toyos</div>
     </footer>
